examples/invalid/recursive-pattern.diagnostics
error: recursive pattern application is not allowed (graph.unbounded_pattern_recursion): expansion cycle Loop -> Loop
   --> examples/invalid/recursive-pattern.whip:10:3
   |
10 |   apply Loop<T> as inner {
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
   = help: break the cycle: pattern expansion must elaborate into a finite program
